--- a/client/paneless/package.json
+++ b/client/paneless/package.json
@@ -16,6 +16,7 @@
     "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-loaders": "^3.0.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
