--- a/client/paneless/package.json
+++ b/client/paneless/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.7.0",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.4.4",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
