--- a/client/paneless/package.json
+++ b/client/paneless/package.json
@@ -2,7 +2,11 @@
   "name": "paneless",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
+    "@apollo/client": "^3.5.8",
+    "graphql": "^15.4.0",
+    "jwt-decode": "^3.1.2",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
