--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "graphql": "^15.4.0",
+    "@stripe/stripe-js": "^1.3.1",
     "jwt-decode": "^3.1.2",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
